--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
                
                         
-                        <!-- menu -->
+                        <!-- se me complicó poder integrar vue.js en el menú -->
                         <div id="MainMenu">
                           <div class="list-group panel">
                             <a href="#" class="list-group-item list-group-item" data-parent="#MainMenu">Item 1</a>
@@ -103,8 +103,9 @@
 
                 <br />
                 <div>
+                  <!-- Tampoco supe como dejar que el botón quedase activo -->
                 <nav class="nav nav-pills flex-column flex-sm-row">
-                    <a class="flex-sm-fill text-sm-center nav-link btn-outline" href="#" v-for="fruta of frutas" >{{fruta}}</a>
+                    <button class="flex-sm-fill text-sm-centeractive btn btn-outline-primary p-2" href="#" v-for="fruta of frutas" >{{fruta}}</button>
                 </nav>
 
                 </div>
@@ -169,7 +170,7 @@
  
     </div>
 
-
+<!-- Usé principalmente cdn  -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
